about me changed and cleaned up a little bit. still flirting with the idea of a resume. but how can I compact it. footer spacing fixed. playing around with a nav color.

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -5,17 +5,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  background-image: url("../../stockPhotos/didier.jpg");
+  background-image: url("../../stockPhotos/miaMCA.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 1200px;
   height: auto;
+  width: 100%;
   padding: 50px;
   margin: 0 auto;
   .about-title {
+    color: white;
     font-weight: 600;
     margin-top: 10px;
+    overflow: hidden;
   }
   @include respond-to("desktop") {
     .about-title {
@@ -24,7 +27,7 @@
   }
   .about-line {
     width: 100%;
-    border-bottom: 1px solid $darktheme;
+    border-bottom: 1px solid white;
     padding: 0px 50px;
     margin-top: 10px;
     margin-bottom: 20px;
@@ -38,18 +41,17 @@
   max-width: 1200px;
   padding: 50px;
   margin: 0 auto;
-  .about-content {
+  .content-title {
     padding-bottom: 5px;
   }
-  .hello-world {
-    margin-top: 20px;
-    margin-bottom: 20px;
+  .about-content {
+    padding: 5px 0px 5px 0px;
   }
+
   .resume-link {
     color: $darktheme;
     text-decoration: underline;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 10px 0px 10px 0px;
     &:hover {
       text-decoration: underline;
       color: $lightgrey;
