--- a/src/components/design/Design.scss
+++ b/src/components/design/Design.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: flex-start;
   padding: 50px;
-  background-image: url("../../stockPhotos/JULEPV1.1.jpg");
+  background-image: url("../../stockPhotos/JULEPV1.0.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
